# AlchimiaNavitas

./: CMakeLists.txt
cmake/: FindInfector.cmake  FindSFML.cmake
include/: engine.hpp  pch.hpp
include/base/: iengine.hpp  irenderer.hpp  iwindow.hpp
include/engine/: openglrenderer.hpp  sfmlwindow.hpp
include/factories/: engine_factory.hpp
src/: engine.cpp  main.cpp
src/engine/: openglrenderer.cpp  sfmlwindow.cpp
src/factories/: engine_factory.cpp
